--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My First Ever Github Repo</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel praesentium beatae dolorum dolor architecto blanditiis corporis cupiditate iure? Veniam nulla commodi molestias, minus nihil provident vitae similique laudantium reiciendis autem!</p>
 </body>
 </html>
