--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="stylws/blogs.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel praesentium beatae dolorum dolor architecto blanditiis corporis cupiditate iure? Veniam nulla commodi molestias, minus nihil provident vitae similique laudantium reiciendis autem!</p>
+    <div>
+        <h1>My new information</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ab pariatur aperiam tempore recusandae odio inventore at laudantium officiis. Quisquam nostrum consequuntur esse dignissimos qui mollitia eligendi laborum suscipit amet.</p>
+    </div>
 </body>
 </html>
